[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/Inimigos/icone.png" type="Texture" id=1]
[ext_resource path="res://Inimigos/Inimigo_Padrão.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool is_white;

void fragment(){
	COLOR = texture(TEXTURE, UV);
	if (is_white && COLOR.a > 0.0){
		COLOR = vec4(1.0)
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/is_white = false

[sub_resource type="CircleShape2D" id=3]
radius = 4.35454

[sub_resource type="CircleShape2D" id=4]
radius = 175.0

[sub_resource type="Animation" id=5]
resource_name = "Baixo"
loop = true

[sub_resource type="Animation" id=6]
resource_name = "Cima"
loop = true

[sub_resource type="Animation" id=7]
resource_name = "Direita"
loop = true

[sub_resource type="Animation" id=8]
resource_name = "Esquerda"
loop = true

[sub_resource type="Animation" id=9]
resource_name = "Hit"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "hit_effect"
}, {
"args": [ false ],
"method": "hit_effect"
} ]
}

[node name="Inimigo_Padrão" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483651
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.111361, 3.11815 )
shape = SubResource( 3 )

[node name="Area_Ataque" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="Coll" type="CollisionShape2D" parent="Area_Ataque"]
shape = SubResource( 4 )

[node name="Campo_de_visao" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2147483653
collide_with_areas = true

[node name="Andar" type="AnimationPlayer" parent="."]
anims/Baixo = SubResource( 5 )
anims/Cima = SubResource( 6 )
anims/Direita = SubResource( 7 )
anims/Esquerda = SubResource( 8 )
__meta__ = {
"_editor_description_": "Esperando Ciro mandar os Sprites 

~V"
}

[node name="Hit" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="body_entered" from="Area_Ataque" to="." method="_on_Area_Ataque_body_entered"]
[connection signal="body_exited" from="Area_Ataque" to="." method="_on_Area_Ataque_body_exited"]
